Off Canvas Flickering fix for IOS

--- a/app/styles/_codepage.sass
+++ b/app/styles/_codepage.sass
@@ -11,7 +11,6 @@
 		@include susy-breakpoint($bp-small-1)
 		    @include span(4 of 12)
 	&__profile
-		padding-top: 20px
 		&--avatar
 			@include cover-background('http://s15.postimg.org/enka9g7qz/GOPR0393.png')
 			display: none
