--- a/app/styles/_normalize.sass
+++ b/app/styles/_normalize.sass
@@ -133,10 +133,10 @@ dfn
 //
 
 h1
-  font-size: 2em
+  font-size: 1.5em
   margin: 0
   -webkit-margin-before: 0
-  -webkit-margin-after: 0 
+  -webkit-margin-after: 0
 
 // List Element
 
