--- a/app/styles/_photography.sass
+++ b/app/styles/_photography.sass
@@ -1,55 +1,12 @@
 @include layout(12 split)
 
-// .photo
-//   font-family: $Khula-font
-//   padding: 8px
-//   @include container
-//   &__flickr
-//     float: left
-//     width: 50%
-//     @include susy-breakpoint($bp-small)
-//         @include span(12 of 12)
-//     @include susy-breakpoint($bp-small-1)
-//         @include span(6 of 12)
-//     @include susy-breakpoint($bp-maximum)
-//         @include span(4 of 12)
-
-
-/* clear fix */
-// .grid
-//   margin: 10px
-//   letter-spacing: normal
-//   @include susy-breakpoint($bp-medium)
-//     padding-top: 30px
-
-// .photo:after 
-//   content: ''
-//   display: block
-//   clear: both
-//   margin: 10px
-
-
-/* ---- .grid-item ---- */
-
-// .photo__sizer
-// .photo__item
-//   width: 33.333%
-
-
-// .photo__item
-//   float: left
-
-
-// .photo__item
-//   img 
-//     display: block
-//     max-width: 98%
-
 .grid
-  margin: 10px
+  margin: 5px
   letter-spacing: normal
-  @include susy-breakpoint($bp-medium)
-    padding-top: 30px
+  h1
+    font-weight: bold
+    font-family: $Khula-font
+    margin-left: 0.83333%
 
 .photo
   font-family: $Khula-font
