--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 $white                 	  : #ffffff !default
-$lightgray                : #BBBBBB !default
+$lightgray                : #949494 !default
 $darkgray				  : #32302f !default
 $lightyellow			  : #f0f465 !default
 $lightblue				  : #a9fae6 !default
